--- a/site_app/static/site_app/css/site_app.css
+++ b/site_app/static/site_app/css/site_app.css
@@ -314,3 +314,20 @@ padding-top: 15px;
 .detail_product{
   min-height: 780px;
 }
+
+.reg{
+ min-height: 780px;
+ text-align: center;
+ padding: 19px;
+ border: 2px solid yellow;
+ display: flex;
+ justify-content:space-around;
+
+}
+.form_reg{
+max-width:60%;
+ border: 2px solid yellow;
+  border-radius: 1%;
+  padding: 10px;
+
+}
