--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,7 +1,11 @@
 {% extends 'site_app/base.html' %}
 
 {% block content %}
-<div class="textcols detail_product">
-
+<div class=" reg">
+    <form method="post" class="form_reg">
+        {%csrf_token%}
+        {{form.as_p}}
+        <button class="btn btn-outline-warning" type="submit"> Регистрация </button>
+    </form>
 </div>
 {% endblock content %}
