--- a/site_app/templates/site_app/base.html
+++ b/site_app/templates/site_app/base.html
@@ -24,9 +24,9 @@
     <a class="nav_items" href='{%url "catalog"%}'>Каталог</a>
     <a class="nav_items" href='{%url "contacts"%}'>Контакты</a>
   </div>
-  <span class="button_menu_header" id='show_menu'>
-    <i class="fa-solid fa-bars"></i>
-  </span>
+<!--  <span class="button_menu_header" id='show_menu'>-->
+<!--    <i class="fa-solid fa-bars"></i>-->
+<!--  </span>-->
   <a href="{%url 'reg'%}">
     <button class="btn btn-outline-warning">Регистрация</button>
   </a>
