--- a/site_app/static/site_app/css/site_app.css
+++ b/site_app/static/site_app/css/site_app.css
@@ -30,7 +30,7 @@ h1{
 header{
   font-family: var(--color-font-family);
   display: flex;
-  width: 90%;
+  width: 100%;
   padding: 20px 5%;
   justify-content: space-between;
   align-items: center;
@@ -190,7 +190,7 @@ img {
 }
 
 footer{
-  width: 90%;
+  width:100%;
   padding: 10px 5%;
   display: flex;
   justify-content: space-between;
@@ -325,9 +325,12 @@ padding-top: 15px;
 
 }
 .form_reg{
-max-width:60%;
+ max-width:60%;
  border: 2px solid yellow;
   border-radius: 1%;
   padding: 10px;
+  -webkit-box-shadow: 0px 0px 8px 17px rgba(227, 229, 98, 0.18);
+  -moz-box-shadow: 0px 0px 8px 17px rgba(227, 229, 98, 0.18);
+  box-shadow: 0px 0px 8px 17px rgba(227, 229, 98, 0.18);
 
 }
