registration.html exit user

--- a/site_app/templates/site_app/base.html
+++ b/site_app/templates/site_app/base.html
@@ -30,6 +30,9 @@
   <a href="{%url 'reg'%}">
     <button class="btn btn-outline-warning">Регистрация</button>
   </a>
+    <a href="{%url 'user'%}">
+    <button class="btn btn-outline-warning ">Войти</button>
+  </a>
 </header>
 <body>
 {%if messages %}
