--- a/site_app/static/site_app/css/site_app.css
+++ b/site_app/static/site_app/css/site_app.css
@@ -32,7 +32,7 @@ header{
   display: flex;
   width: 100%;
   padding: 20px 5%;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   position: sticky;
 
@@ -333,4 +333,15 @@ padding-top: 15px;
   -moz-box-shadow: 0px 0px 8px 17px rgba(227, 229, 98, 0.18);
   box-shadow: 0px 0px 8px 17px rgba(227, 229, 98, 0.18);
 
+}
+.form_reg.auth {
+ display:block;
+ weight:100%;
+ height:50%;
+}
+
+.form_reg.auth input{
+ display:block;
+ weight:100%;
+ height:50%;
 }
