--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -6,6 +6,7 @@
         {%csrf_token%}
         {{form.as_p}}
         <button class="btn btn-outline-warning" type="submit"> Регистрация </button>
+        <a href="{%url 'user'%}">Уже зарегистрированы? </a>
     </form>
 </div>
 {% endblock content %}
