--- a/site_app/static/site_app/css/site_app.css
+++ b/site_app/static/site_app/css/site_app.css
@@ -35,6 +35,7 @@ header{
   justify-content: space-around;
   align-items: center;
   position: sticky;
+  border-bottom: 2px solid yellow;
 
 }
 
@@ -326,7 +327,7 @@ padding-top: 15px;
 }
 .form_reg{
  max-width:60%;
- border: 2px solid yellow;
+ border-bu: 2px solid yellow;
   border-radius: 1%;
   padding: 10px;
   -webkit-box-shadow: 0px 0px 8px 17px rgba(227, 229, 98, 0.18);
@@ -344,4 +345,9 @@ padding-top: 15px;
  display:block;
  weight:100%;
  height:50%;
+}
+
+
+.bord_top{
+  text-align: center;
 }
