--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,8 +1,24 @@
 {% extends 'site_app/base.html' %}
 
 {% block content %}
+
+
 <div class=" reg">
-  {{user.username}}
-  {{user.email}}
+  <div class="media text-muted pt-3">
+      <img class="bd-placeholder-img mr-2 rounded" width="80" height="80" src="{{user.profile.img.url}}">
+      <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+        <strong class="d-block text-gray-dark">@{{user.username}}</strong>
+          {%if user.email%}
+            <b>Email: </b>{{user.email}}
+          {%endif%}
+      </p>
+      <form method="post" enctype="multipart/form-data" class="">
+        {%csrf_token%}
+          {{updateUserForm.as_p}}
+          {{profileForm.as_p}}
+        <button class="btn btn-outline-warning" type="submit"> Обновить </button>
+        </form>
+    </div>
+
 </div>
 {% endblock content %}
