--- a/users/templates/users/exit.html
+++ b/users/templates/users/exit.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class=" reg">
-    Вы вышли
+    <h1 class="mt-5">Вы вышли, но вы еще обязательно войдете </h1>
 </div>
 {% endblock content %}
