--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,7 +4,9 @@
 
 
 <div class=" reg">
+
   <div class="media text-muted pt-3">
+          <h3>Ваш собственный кабинет</h3>
       <img class="bd-placeholder-img mr-2 rounded" width="80" height="80" src="{{user.profile.img.url}}">
       <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
         <strong class="d-block text-gray-dark">@{{user.username}}</strong>
@@ -15,7 +17,9 @@
       <form method="post" enctype="multipart/form-data" class="">
         {%csrf_token%}
           {{updateUserForm.as_p}}
-          {{profileForm.as_p}}
+          <span> {{profileForm.img}}</span>
+          <p class="mt-3  " >Выберите SEX: <span >{{profileForm.sex}}</span></p>
+          <p class="mt-2 border border-light ">Подписка на лимонные новости ) {{profileForm.choi}}<p>
         <button class="btn btn-outline-warning" type="submit"> Обновить </button>
         </form>
     </div>
